real-estate-page/css/style.css
body {
    background-color:white;
}

header {
    width: 1280px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: auto;
}

header nav a {
    text-decoration: none;
    margin-left: 50px;
    font-family: 'Maven Pro', sans-serif;
    font-size: 25px;
    color: #8D6C9F;
}

header nav a:hover {
    font-weight: bold;
}

header button {
    border-radius: 10px;
    text-decoration: none;
    margin-left: 50px;
    font-family: 'Comfortaa', sans-serif;
    font-size: 20px;
    background-color: #EC7899;
    border: none;
    color: white;
    padding: 10px 20px;
    cursor: pointer;
}

header button:hover {
    font-weight: bold;
    background-color: rgb(236, 33, 91);
}


/* header nav button {
    text-decoration: none;
    margin-left: 50px;
    font-family: 'Maven Pro', sans-serif;
    color: #8D6C9F;
} */

div.logo-container {
    text-align: center;
}

div.logo-container a {
    font-family: 'Maven Pro', sans-serif;
    display: block;
    font-size: 10px;
    text-decoration: none;
    color: white;
}

div.logo-container a:hover {
    color: #8D6C9F;
}

section.primary-search-box {
    background-image: url("building.jpeg");
    width: 1080px;
    height: 653px;
    margin: auto;
    border-radius: 50px; 
    box-shadow: 20px 20px 100px -30px #8D6C9F;
    padding: 100px; 

}

section.primary-search-box h1 {
    text-align: right;
    width: 60%;
    font-size: 50px;
    font-family: 'Anton', sans-serif;
    color: #8D6C9F;
    margin: 150px 0px auto auto;
    opacity: 1;
    line-height: 70px;
}

section.search-bar form {
    /* font-size: 100px; */
    color: black;
    background-color: white;
    line-height: 25px;
}

section.search-bar {
    width: 950px;
    /* margin: auto; */
    display: flex;
    justify-content: space-evenly;   
    font-family: 'Anton', sans-serif;
    padding: 15px 0px;
    border-radius: 15px;
    opacity: .8;
    margin: auto 0px auto auto;
}

section.search-bar input, section.search-bar select {
    display: block;
    color: black;
    border: none;
    border-bottom: solid gray 1px;
    font-size: 20px;
    font-family: 'Maven Pro', sans-serif;

}

section.search-bar, section.search-bar *, section.search-bar form {
    background-color: white; 
}

form select {
    -moz-appearance:none; /* Firefox */
    -webkit-appearance:none; /* Safari and Chrome */
    appearance:none;
    background-image: url("https://img.icons8.com/metro/26/000000/expand-arrow.png");
    background-repeat: no-repeat;
    background-position: right;
    background-size: 10px;
    /* width: 100px; */
    /* height: 100px; */
}

form.category select {
    width: 110px;
}
form.city select {
    width: 200px;
}
form.state select {
    width: 220px;
}
form.price-limit select {
    width: 200px;
}

section.search-bar label {
    /* font-weight: bold; */
    font-size: 20px;
    font-family: 'Maven Pro', sans-serif;
}

section.primary-search-box button {
    border-radius: 15px;
    border: none; 
    width: 100px;
    height: auto;
    font-size: 20px;
    font-family: 'Comfortaa', sans-serif;
    /* text-align: left; */
    color: white;
    background-color: #8D6C9F;
}

section.primary-search-box button:hover {
    /* color: #EC7899; */
    cursor: pointer;
    font-weight: bold;
    background-color: indigo;
}

